# Excel-Project

./: README.md  main.py  pyproject.toml  read.md  replit.nix  replit_zip_error_log.txt
static/: lost.css
static/download_excel/: citiy.xlsx  citiy2.xlsx  city.xlsx  in.xlsx  sid.xlsx  test2.xlsx
static/upload_excel/: citiy2.xlsx  city.xlsx  sid.xlsx  test2.xlsx
templates/: download.html  index.html
